<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProfileActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lavender"
        app:contentInsetStartWithNavigation="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Code Coach"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Profile Update Title -->
    <TextView
        android:id="@+id/updateProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Update Profile"
        android:textSize="30sp" />

    <!-- Edit Icon -->
    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="20dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@id/updateProfileTitle"
        android:src="@drawable/edit" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/updateProfileTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="UserName" />

    <!-- First Name Input -->
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/userName"
        android:hint="@string/first_name" />

    <!-- Last Name Input -->
    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextFirstName"
        android:hint="@string/last_name" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextLastName"
        android:hint="@string/phone_number" />

    <!-- Edit Profile Button -->

    <Button
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createProfile"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="141dp"
        android:text="Edit Profile" />

    <Button
        android:id="@+id/createProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="Create Profile" />

</RelativeLayout>


