<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lavender"
        app:contentInsetStartWithNavigation="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Code Coach"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="16dp"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/updateProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Update Profile"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@id/updateProfileTitle"
        android:src="@drawable/edit"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/updateProfileTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="UserName"
        android:gravity="center"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/userName"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextFirstName"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextLastName"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/phone_number" />

    <TextView
        android:id="@+id/modulesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_marginTop="27dp"
        android:layout_marginStart="16dp"
        android:text="@string/modules_to_tutor"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/moduleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modulesText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/pricesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moduleSpinner"
        android:layout_marginTop="27dp"
        android:layout_marginStart="16dp"
        android:text="Price for selected module"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/priceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pricesText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/editProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceSpinner"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Edit Profile"/>

    <Button
        android:id="@+id/createProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfile"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Create Profile"/>
</RelativeLayout>


